# holidayBA

./: .gitignore  CMakeLists.txt  README.md  build.sh
docker/: Dockerfile  build_and_start_docker.sh  docker-compose.yaml  enter_docker.sh
example/: CMakeLists.txt  ba_lie_testy.cpp
example/ba_ceres/: CMakeLists.txt  ba_ceres.cpp
example/ba_lie/: CMakeLists.txt  ba_lie_testy.cpp
include/: bal_optmizer.hpp  types.hpp
include/ba/: bal_bundle_adjuster.hpp  bundle_adjuster_base.hpp  ceres_bal_bundle_adjuster.hpp  ceres_bundle_adjuster.hpp
include/camera/: camera_model_base.hpp  camera_model_pinhole_bal.hpp  camera_type_traits.hpp
src/: bal_bundle_adjuster.cpp  bal_optmizer.cpp
src/ba/: bal_bundle_adjuster.cpp  ceres_bal_bundle_adjuster.cpp
src/camera/: camera_model_pinhole_bal.cpp
